headway with css - need to fix header spacing

--- a/styles/site.css
+++ b/styles/site.css
@@ -13,8 +13,6 @@ body {
     background-color: #e2efff; 
     margin: 0px;
     color: #004483;
-    padding-left: 40px;
-    padding-right: 40px;
     font-family: 'Futura', 'Verdana', 'Helvetica', sans-serif;
 }
 
@@ -22,14 +20,36 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
-.button {
+#home-welcome {
+    text-align: center;
+    padding-left: 350px;
+    padding-right: 350px;
+}
+
+button {
     color: #004483;
     border: 3px solid;
-    width: fit-content;
     padding: 10px;
     border-radius: 12px;
+    background: none;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-weight: bold;
+}
+
+#arrows {
+    max-height: 15px;
+}
+
+#button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 nav ul {
@@ -42,6 +62,10 @@ nav ul {
 a, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
+}
+
+#projects {
+    background-color: #FDFDFD;
 }
 
 .project a {
@@ -75,5 +99,10 @@ h1 {
 
 h2 {
     font-family: "Paytone One", serif;
+}
+
+footer {
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
